# QubOS

./: .gitignore  README.md
libhash/: CMakeLists.txt  Rope.c  libcrypt.c  libhash.c  libhash.h  main.c  protocol.c  protocol.h  secrets.c
libhash/include/: Rope.h  libcrypt.h  protocol.h
libhash/sources/: endian-test.c  libcrypt.c  libhash.c  main.c  protocol.c  secrets.c  simulation_test.c
src/mx/: mx.c  mx.h
src/tasks/: task_params.h
src/tasks/battery_task/: battery_task.c  battery_task.h
src/tasks/comm_handler_task/: comm_handler_task.c  comm_handler_task.h
src/tasks/critical_comm_task/: critical_comm_task.c  critical_comm_task.h
src/tasks/rx_comms_task/: rx_comm_task.c  rx_comm_task.h
src/tasks/tx_task/: tx_task.c  tx_task.h
